--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 #content {
   margin: 7%;
   border: solid blue;
-  border-width: thick;
+  border-width: 8px;
   border-radius: 20px;
 }
 
@@ -31,6 +31,6 @@ body {
 
 .description {
   padding: 2%;
-  font-size: 14px;
+  font-size: 15px;
   font-family: helvetica;
 }
