--- a/home.css
+++ b/home.css
@@ -15,37 +15,30 @@ body {
 }
 
 #content {
-  margin: 2% 7% 0 7%;
-  border: solid black;
-  border-width: 8px;
+  padding-top: 2%;
 }
 
 .title {
   font-family: mono45-headline,monospace;
   font-weight: 500;
   font-style: normal;
-  font-size: 30px;
-  padding-left: 2%;
+  font-size: 23px;
+  font-style: normal;
 }
 
 .description {
   padding: 1%;
   font-size: 15px;
   font-family: helvetica;
-  font-weight: bold;
 }
 
 .link {
   font-family: helvetica;
+  font-size: 28px;
   font-weight: bold;
-  padding-left: 7%;
-  padding-top: 2%
-}
-
-ol {
-  line-height: 25px;
   padding-bottom: 3%;
 }
+
 
 a:link {
   transition: color .3s ease;
