--- a/home.css
+++ b/home.css
@@ -5,13 +5,14 @@ body {
 
 #banner {
   width: 100%;
-  height: 5vw;
+  height: 70px;
   background-color: black;
 }
 
 .topnav {
+  position: absolute;
+  float: left;
   margin-left: 78%;
-  padding-top: 2%
 }
 
 #content {
@@ -34,7 +35,7 @@ body {
 
 .link {
   font-family: helvetica;
-  font-size: 28px;
+  font-size: 50px;
   font-weight: bold;
   padding-bottom: 3%;
 }
