--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 #banner {
   width: 100%;
-  height: 5vw;
+  height: 10%;
   background-color: black;
 }
 
@@ -25,7 +25,7 @@ body {
   font-weight: 500;
   font-style: normal;
   font-size: 30px;
-  padding-left: 2%;
+  padding-left: 3%;
 }
 
 .description {
